--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.9",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
